removed --host option from build process

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "astro dev --host",
     "start": "astro dev --host",
-    "build": "astro build --host",
+    "build": "astro build",
     "preview": "astro preview --host",
     "astro": "astro"
   },
