--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.3",
     "astro": "^2.10.9",
     "astro-compress": "^2.0.12",
     "autoprefixer": "^10.4.15",
-    "postcss-inline-svg": "^6.0.0"
+    "postcss-inline-svg": "^6.0.0",
+    "sharp": "^0.32.5"
   }
 }
