added aliases for layouts and styles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
     "types": ["@astrojs/image/client"],
     "paths": {
       "@components/*": ["src/components/*"],
-      "@assets/*": ["src/assets/*"]
+      "@assets/*": ["src/assets/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@styles/*": ["src/styles/*"],
     }
   }
 }
