--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@astrojs/image": "^0.17.3",
     "astro": "^2.10.9",
     "astro-compress": "^2.0.12",
+    "astro-icon": "^0.8.1",
     "autoprefixer": "^10.4.15",
     "postcss-inline-svg": "^6.0.0",
-    "sharp": "^0.32.5"
+    "sharp": "^0.32.5",
+    "svgo": "2.8.0"
   }
 }
